<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.iban</groupId>
	<artifactId>Lands</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>Lands</name>

	<description>Plugin de protections</description>
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<relocations>
								<relocation>
									<pattern>com.github.ben-manes.caffeine</pattern>
									<shadedPattern>fr.iban.lands.libs.com.github.ben-manes.caffeine</shadedPattern>
								</relocation>
								<relocation>
									<pattern>com.github.benmanes.caffeine</pattern>
									<shadedPattern>fr.iban.lands.libs.com.github.benmanes.caffeine</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>quickshop-repo</id>
			<url>https://repo.codemc.io/repository/maven-public/</url>
		</repository>
		<!-- HeadDatabase-API -->
		<repository>
			<id>HeadDatabase-API</id>
			<url>https://mvn.intellectualsites.com/content/repositories/thirdparty/</url>
		</repository>
		<!-- Parties-API-->
		<repository>
			<id>alessiodp-repo</id>
			<url>https://repo.alessiodp.com/releases/</url>
		</repository>
		<repository>
			<id>jitpack</id>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.18.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>fr.iban</groupId>
			<artifactId>CorePaper</artifactId>
			<version>1.0</version>
			<scope>provided</scope>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>com.github.IbanEtchep</groupId>-->
<!--			<artifactId>Guilds</artifactId>-->
<!--			<version>v1.0.0</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
		<dependency>
			<groupId>fr.iban.guilds</groupId>
			<artifactId>Guilds</artifactId>
			<version>1.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.maxgamer</groupId>
			<artifactId>QuickShop</artifactId>
			<version>5.1.0.9</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>3.1.1</version>
			<scope>compile</scope>
		</dependency>
		<!-- HeadDatabase-API -->
		<dependency>
			<groupId>com.arcaniax</groupId>
			<artifactId>HeadDatabase-API</artifactId>
			<version>1.3.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- Vault-->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>
